doc/grammar.txt
expr    : WORD ASSIGN expr
        : term ((PLUS|MINUS) term)*

term    : factor ((MUL|DIV) factor)*

factor  : (PLUS|MINUS) factor
        : power

power   : atom (POW factor)*

atom    : INT|FLOAT|WORD
        : LPAREN expr RPAREN
